AGgregation with join use case.